# lsdjai

./: .gitattributes  .gitignore  CLAUDE.md  README.md  justfile  sa3-pin.json
.plans/: issue-54-thread-stable-audio-3-full-generation-surface.md  issue-77-beat-estimator-acquisition-and-genre-accuracy.md
backend/: .gitignore  pyproject.toml
backend/lsdj/: controller.py  engine.py  loras.py  sa3.py  sidecar.py  worker.py
backend/magenta_dj/: controller.py  engine.py  worker.py
backend/scripts/: spike_beat_corpus.py  spike_generate.py  verify_m1.py  verify_sa3_surface.py
backend/slipmate/: controller.py  sidecar.py
backend/spike_corpus/: manifest.json
backend/tests/: test_controller.py  test_engine.py  test_loras.py  test_models.py  test_sa3.py  test_sidecar.py  test_worker.py
docs/: ROADMAP.md  adr-0020-inversion-inventory.md  bluetooth-output-hardware-checklist.md  flx4-trim-hardware-checklist.md  issue-37-phase1-hardware-checklist.md  issue-37-phase2-mcp-checklist.md  issue-46-steering-checklist.md  issue-47-hardware-checklist.md  issue-48-hardware-checklist.md  issue-50-checklist.md  issue-54-checklist.md  issue-66-checklist.md  issue-77-hardware-checklist.md  issue-84-checklist.md  m16-hardware-checklist.md  m19-hardware-checklist.md  m20-hardware-checklist.md  m21-hardware-checklist.md  m24-samples-hardware-checklist.md  m9-m10-hardware-checklist.md  media-preview-hardware-checklist.md  media-tray-checklist.md  midi-ddj-flx4.md  mixer-cleanup-checklist.md  native-migration-hardware-checklist.md  native-migration-plan.md  native-packaging.md  net-hardware-checklist.md  sa3-lora-stack.patch  spike-beat-detection-issue-77.md  spike-beat-detection.md  spike-bpm.md  spike-c-midi.md  spike-mrt2.md  spike-packaging.md  spike-rust-audio.md  spike-sa3-lora.md  split-cue-hardware-checklist.md
docs/adr/: 0002-browser-app-with-python-model-workers.md  0003-frontend-audio-mixing-via-web-audio.md  0005-hardware-control-via-web-midi-in-the-frontend.md  0006-cue-output-via-a-second-audio-sink.md  0007-flx4-phones-jack-via-a-backend-cue-sink.md  0010-beat-detection-on-the-output-behind-an-honesty-gate.md  0012-generated-pads-via-a-spawned-sa3-mlx-subprocess.md  0015-hot-cues-in-deck-state-loops-on-the-buffer-source.md  0017-native-rust-audio-engine-superseding-web-audio.md  0018-native-macos-shell-tauri-with-python-sidecars.md  0019-pcm-transport-from-python-sidecars-to-the-rust-engine.md  0020-rust-interface-state-store-and-mcp-server.md  0021-split-master-and-cue-to-independent-output-devices.md  0022-persist-generated-samples-and-loops.md  0023-midi-note-and-drum-conditioning-over-the-deck-control-channel.md  0024-key-detection-in-the-rust-audio-engine-behind-an-honesty-gate.md  0025-beat-detection-in-the-rust-audio-engine.md  0026-lane-driven-variable-chunk-segmentation.md  0027-headphone-preview-for-library-items.md  0028-sa3-lora-via-the-mlx-path.md  0028-stream-master-recording-to-disk.md  0029-output-resampling-for-non-48k-devices.md  0030-track-decode-and-offline-track-analysis-in-the-rust-shell.md  0031-native-midi-in-the-rust-core-superseding-web-midi.md  0032-standalone-midi-keyboard-window.md  0033-song-as-an-arrangement-of-reusable-parts.md  0034-structured-song-render-via-backend-continuation-conditioning.md  0035-dual-envelope-beat-detection-with-fast-change-invalidation.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/scripts/: verify_m17.mjs  verify_m2.mjs  verify_m20.mjs  verify_m3.mjs  verify_m4.mjs  verify_m7.mjs
frontend/src/: App.shift.test.tsx  App.test.tsx  App.tsx  index.css  main.tsx  persistence.test.ts  persistence.ts  presets.test.ts  presets.ts  selectionMask.test.ts  selectionMask.ts
frontend/src/audio/: bands.test.ts  bands.ts  beat.ts  cueStream.test.ts  cueStream.ts  engine.ts  fx.test.ts  fx.ts  interfaceStore.test.ts  interfaceStore.ts  master.ts  nativeEngine.test.ts  nativeEngine.ts  notes.test.ts  notes.ts  types.ts
frontend/src/control/: MidiControls.test.tsx  MidiControls.tsx  appIntents.test.ts  appIntents.ts  bus.ts  control.css  driver.ts  flx4.test.ts  flx4.ts  midi.test.ts  midi.ts  nativeMidi.ts  registry.ts  useMidi.test.tsx  useMidi.ts
frontend/src/crates/: CrateBrowser.test.tsx  CrateBrowser.tsx
frontend/src/deck/: DeckColumn.test.tsx  DeckColumn.tsx  DeckPanel.test.tsx  DeckPanel.tsx  PerformanceDrawer.test.tsx  PerformanceDrawer.tsx  PerformancePanel.tsx  PianoWindow.css  PianoWindow.test.tsx  PianoWindow.tsx  deck.css  deckState.test.ts  deckState.ts  nativeDeck.test.ts  nativeDeck.ts  nativeDeckPcm.ts  padWeights.test.ts  padWeights.ts  useDeck.test.tsx  useDeck.ts
frontend/src/i18n/: en.json
frontend/src/media/: MediaExplorer.test.tsx  MediaExplorer.tsx  media.css  mediaTray.ts
frontend/src/mixer/: MixerStrip.test.tsx  MixerStrip.tsx  RecordControl.test.tsx  RecordControl.tsx  mixer.css
frontend/src/models/: LoraLibrary.test.tsx  LoraLibrary.tsx  ModelManager.test.tsx  (+3 more)
frontend/tests/: midi_probe.rs
scripts/: freeze-sidecar.sh  sa3-install.sh
spike/midi/: .gitignore  README.md
spike/midi/src-tauri/: Cargo.toml  tauri.conf.json
spike/midi/src-tauri/capabilities/: default.json
spike/midi/src-tauri/src/: lib.rs  main.rs
spike/packaging/: .gitignore  build.sh  freeze_test.py  run.sh
spike/rust-audio/: .gitignore  CONTRACT.md
spike/rust-audio/engine/: Cargo.toml
spike/rust-audio/engine/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/engine/: Cargo.toml
src-tauri/engine/src/: device.rs  fx.rs  graph.rs  host.rs  lib.rs  loops.rs  ring.rs  telemetry.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  decode.rs  generation.rs  lib.rs  library.rs  loras.rs  main.rs  mcp.rs  models.rs  samples.rs  settings.rs  sidecar.rs  songs.rs  store.rs  style.rs  style_send.rs  watcher.rs
src-tauri/src/analysis/: bands.rs  beat.rs  beat_corpus.rs  grid.rs  live.rs  mod.rs  track.rs
src-tauri/src/midi/: drivers.rs  leds.rs  mod.rs  notes.rs  translate.rs
(+31 files in other folders)
