[package]
name = "lsdj-app"
version = "0.1.0"
edition = "2021"
publish = false
description = "LSDJai native shell: the Tauri v2 app hosting the React UI and the Rust audio engine (Phase 2, ADR-0017/0018)."

# Tauri v2 keeps the app logic in a lib so the same crate can be reused on
# mobile and driven by an integration harness; `main.rs` is a thin entry point.
[lib]
name = "lsdj_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lsdj-app"
path = "src/main.rs"

# The cargo WORKSPACE. The app is the root package; the audio engine is a member
# library crate so it stays headless-testable (`cargo test -p lsdj-engine`)
# without a window. One lockfile lives at the workspace root.
[workspace]
members = ["engine"]
resolver = "2"

[build-dependencies]
# Pinned to the version proven in the Spike C MIDI app (spike/midi/src-tauri).
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 shell. Versions are the ones the Spike C app resolved against
# (tauri 2.11.2, tauri-plugin-midi 0.2.0); see spike/midi/src-tauri/Cargo.lock.
tauri = { version = "2", features = [] }
# The WebMIDI shim over midir/CoreMIDI (ADR-0005, Phase 2 step 2). Wired now so
# the shell carries the plugin from the start; the frontend rewire to it is a
# later step.
tauri-plugin-midi = "0.2"
# Native file/folder picker for the media browser's folder tab — WKWebView has no
# File System Access API, so the Chromium showDirectoryPicker path can't run
# natively. First-party Tauri plugin; the directory listing + file reads are our
# own commands (no fs plugin / scope needed).
tauri-plugin-dialog = "2"
# Reveal the generated-songs folder in Finder (the "Open songs folder" button —
# WKWebView can't download). First-party Tauri plugin; called only from Rust
# (open_songs_folder), so the webview needs no opener capability.
tauri-plugin-opener = "2"
# Move a deleted song to the OS Trash (recoverable) instead of an unrecoverable
# unlink, for the take list's ✕ (delete_generated_song). Reputable, cross-platform.
trash = "5"
# Watch the generated_songs / generated_samples folders so the Media Explorer tabs
# live-reload on a change (a deck auto-saving a sample, a hand-drop/-delete). The
# de-facto Rust FS-watch crate (also what tauri-plugin-fs uses); cross-platform,
# widely maintained. Rust owns the watch + emits an event — the webview gets no fs
# access (ADR-0022).
notify = "6"
# Process-group signalling for cancelling a model install (issue #43): the install
# runs `uv run python …`, so killing the immediate child orphans the real worker —
# we put it in its own group and `kill(2)` the whole group. rust-lang's libc, already
# in the tree transitively; the minimal way to reach the syscall.
libc = "0.2"
# The audio engine as a workspace member (the cpal device + RT-safe mix core).
lsdj-engine = { path = "engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1.8", default-features = false, features = ["server", "transport-streamable-http-server", "macros", "schemars"] }
axum = "0.8"
tokio-util = "0.7.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net"] }
schemars = "1"
rand = "0.10"
# The MCP `generate_sample` tool proxies the loopback generation server's
# `/api/generate` from the Rust shell (the webview's HTTP client isn't reachable
# from a tool). reqwest is the de-facto async Rust HTTP client; loopback is plain
# HTTP, so default TLS is dropped to keep the dependency lean. Shares axum's
# hyper/tokio tree.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# Shell-side track decode (ADR-0030): pure-Rust demux + decode covering the
# folder browser's extension allowlist (wav/aiff via riff, flac/ogg-vorbis in
# the defaults, mp3, and m4a via isomp4+aac+alac). The de-facto Rust audio
# decoder — already in the tree transitively (fundsp), pinned to that same
# version; `is_audio_file` must stay derived from these features so the
# browser never offers a file the decoder refuses.
symphonia = { version = "=0.5.5", features = ["mp3", "aac", "alac", "isomp4", "aiff"] }
# Offline resample of decoded tracks to the engine's 48 kHz (ADR-0030) — the
# same crate, pin, and feature the engine's output path justified (ADR-0029);
# this use is allocating and non-RT (a load, not a callback).
rubato = { version = "=3.0.0", default-features = false, features = ["fft_resampler"] }

[dev-dependencies]
# The ADR-0025 corpus regression replays the spike WAVs (16-bit PCM) through
# the Rust estimator; hound is the de-facto WAV codec — reputable, tiny, and
# pinned, so the cutover gate never rests on a hand-rolled parser.
hound = "=3.5.1"

# Workspace-level release profile. Cargo only honours `[profile.*]` at the
# workspace root, so the engine crate's opt-level=3 lives here now (moved out of
# engine/Cargo.toml, where it was silently ignored under the workspace).
[profile.release]
opt-level = 3

# Dev profile: dependencies get full optimisation — symphonia/rubato run the
# whole track-load decode+resample (ADR-0030), which measures 37.4 s at
# opt-level 0 vs 0.5 s optimised on a 5-minute 44.1 kHz WAV (the
# `timing_full_load_pipeline` diagnostic in decode.rs) — and the workspace
# crates take opt-level 2 for the in-crate sample loops and analyses (1.5 s
# end-to-end vs 3.0 s at opt-level 1; the rebuild cost is dominated by the
# link step either way). `package."*"` never applies to workspace members, so
# the split is exactly deps-hot / app-warm.
[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

