[package]
name = "lsdj-engine"
version = "0.1.0"
edition = "2021"
publish = false
description = "LSDJai native audio engine: RT-safe two-deck cpal/fundsp mix (Phase 1, ADR-0017/0019)."

# The audio engine as a LIBRARY crate so the RT-safe core (Engine::render) is
# testable headless in CI (cargo test, no device). The cpal device path is a
# thin wrapper exercised by the device_run binary and on real hardware.
[lib]
name = "lsdj_engine"
path = "src/lib.rs"

# A standalone binary that drives the library against a real output device for
# N seconds with synthetic producers — keeps the device path exercisable.
[[bin]]
name = "device_run"
path = "src/bin/device_run.rs"

[dependencies]
# Pinned per .claude/rules/security.md; same versions proven in Spike A
# (spike/rust-audio/engine/Cargo.toml):
#   fundsp — DSP graph library; the per-deck EQ biquad chain (flat for now).
#   cpal   — de-facto Rust cross-platform audio I/O (CoreAudio backend).
#   rtrb   — realtime-safe wait-free SPSC ring (the per-deck player ring).
#   assert_no_alloc — allocator guard proving the cpal callback never allocs.
fundsp = "=0.23.0"
cpal = "=0.18.1"
rtrb = "=0.3.4"
# assert_no_alloc: default features include `disable_release`, which makes the
# guard a no-op in release. We turn that off and enable `warn_release` so the
# check stays live in release but only WARNS (never aborts) — an alloc in the
# audio callback must not crash the stream.
assert_no_alloc = { version = "=1.1.2", default-features = false, features = ["warn_release", "warn_debug"] }
# rubato — de-facto Rust sample-rate-conversion crate (ADR-0029). Only the
# synchronous FFT resampler (`fft_resampler`) is pulled; `default-features` is off
# so the `log` feature stays OUT (rubato's own real-time-safety requirement — its
# `process_into_buffer` must not log/alloc on the audio callback). Used only on
# the fallback path for a device with no 48000/f32 config (e.g. a 44100 Bluetooth
# speaker); the exact-48000 path never touches it.
rubato = { version = "=3.0.0", default-features = false, features = ["fft_resampler"] }

# NOTE: the release profile (opt-level = 3) lives in the workspace root
# (src-tauri/Cargo.toml). Cargo only honours `[profile.*]` at the workspace
# root, so it would be ignored here.
